# new_moxxy

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  README.md  TECH_DEBT.md  eslint.config.js  moxxy.config.ts  moxxy.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: fix-publish-with-pnpm.md  init-single-provider-picker.md  login-browser-flag.md
.claude/agents/: plugin-author.md
.github/workflows/: ci.yml  release-desktop.yml
.playwright-mcp/: page-2026-05-30T01-43-35-466Z.yml
apps/desktop/: .env.example  .gitignore  electron.vite.config.ts  focus.html  index.html  package.json  tsconfig.json  tsconfig.node.json  turbo.json  vitest.config.ts
apps/desktop/electron/main/: chat-log.test.ts  desks.ts  focus-window.ts  index.ts  ipc.ts  onboarding.ts  provider-discovery.ts  runner-supervisor.ts  session-driver.ts  workspace-fs.ts
apps/desktop/electron/preload/: index.ts
apps/desktop/electron/shared/: ipc.ts
apps/desktop/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  Splash.tsx  main.tsx  styles.css  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/core/: Cargo.toml
apps/desktop/src-tauri/crates/core/src/: error.rs  jsonrpc.rs  lib.rs  requirements.rs  runner_bridge.rs  schedule.rs  settings.rs
apps/desktop/src-tauri/crates/core/src/desks/: json_store.rs  mod.rs
apps/desktop/src-tauri/crates/core/src/sidecar/: mock.rs  mod.rs  node.rs
apps/desktop/src-tauri/crates/core/src/transport/: mock.rs  mod.rs  unix.rs
apps/desktop/src-tauri/crates/core/tests/: integration.rs
apps/desktop/src-tauri/src/: app_state.rs  boot.rs  commands.rs  lib.rs  requirements.rs
apps/desktop/src/chat/: AgentPicker.tsx  AskSheet.tsx  BlockView.tsx  ChatSurface.tsx  CommandPalette.tsx  Composer.tsx  ContextMeter.tsx  ExtensionCard.tsx  MarkdownBody.tsx  SkillGroupView.tsx  StatusLine.tsx  ThinkingIndicator.tsx  ToolGroupView.tsx  Transcript.tsx  UsageModal.tsx  composer.test.tsx  composer.tsx
apps/desktop/src/chat/agent-picker/: AgentPicker.tsx  ChipButton.tsx  ChipSelect.tsx  ProviderModelPicker.tsx  types.ts
apps/desktop/src/chat/blocks/: ActionRow.tsx  AssistantBlock.tsx  BlockView.tsx  EventBlockView.tsx  StreamingAssistant.tsx  SubagentView.tsx  ToolBlock.tsx  UserBlock.tsx  block-shared.ts
apps/desktop/src/chat/chat-surface/: ChatLoading.tsx  EmptyState.tsx  ErrorToast.tsx  Header.tsx  RenameWorkspaceModal.tsx  SuggestedActions.tsx  suggestions.ts
apps/desktop/src/chat/command-palette/: ArgsForm.tsx  CommandPalette.tsx  steppers.ts  types.ts
apps/desktop/src/chat/composer/: AttachmentChip.tsx  QueuedChip.tsx  ToolChip.tsx  composer-styles.ts
apps/desktop/src/connection/: ConnectionScreen.tsx
apps/desktop/src/desks/: desk-sidebar.test.tsx  desk-sidebar.tsx
apps/desktop/src/focus/: Active.tsx  FocusWidget.test.tsx  FocusWidget.tsx  Inactive.tsx  MiniText.tsx  SpectroBackground.tsx  focus-icons.tsx  focus-main.tsx  focus-primitives.tsx  focus-styles.ts  focus.css  useLatestBlock.ts
apps/desktop/src/lib/: Icon.tsx  Modal.tsx  Skeleton.tsx  api.ts  askStore.ts  audioToPcm16.ts  chatModel.test.ts  chatModel.ts  chatPersistence.ts  chatReducer.ts  chatStore.ts  desks.test.ts  desks.ts  errors.ts  next-compat-shim.ts  runner-info.ts  runner.ts  schedules.test.ts  schedules.ts  settings.ts  speech.test.ts  speech.ts  step-flow.test.ts  step-flow.ts  useChat.ts  useConnection.ts  useContextUsage.ts  useDesks.ts  useOnboarding.ts  usePrefs.ts  useSettings.ts  useVoiceRecorder.ts  useWorkflows.test.tsx  useWorkflows.ts  voice.test.ts  voice.ts
apps/desktop/src/onboarding/: FirstRunWizard.tsx  InitWizard.tsx  Onboarding.tsx  chrome.tsx  flow.ts
apps/desktop/src/schedules/: index.ts  schedule-panel.test.tsx  schedule-panel.tsx
apps/desktop/src/settings/: AboutTab.tsx  McpTab.tsx  ProvidersTab.tsx  SettingsPanel.tsx  SkillsView.tsx  TabHeader.tsx  VaultTab.tsx  settings-panel.tsx  settings-primitives.tsx
apps/desktop/src/shell/: ContextRail.tsx  ProfileView.tsx  WorkspaceFiles.tsx  WorkspaceSidebar.tsx
apps/desktop/src/workflows/: WorkflowsPanel.tsx
apps/docs/: package.json
apps/example-basic/: package.json
apps/example-basic/src/: index.ts
apps/example-cli/: package.json
apps/example-cli/src/: index.ts
apps/fixture-recorder/: package.json
apps/fixture-recorder/src/: index.ts
docs/: desktop-code-signing.md
scripts/: safe-publish.mjs
(+35 files in other folders)
